--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.5",
